Fix long reviews being cut off.

--- a/frontends/onthehouse_flask/static/common.css
+++ b/frontends/onthehouse_flask/static/common.css
@@ -69,5 +69,4 @@ Organization:
     .review-text{
       overflow: hidden;
       text-overflow: ellipsis;
-      max-height: 180px;
     }
